--- a/bardot.html
+++ b/bardot.html
@@ -94,8 +94,8 @@
         the project required a lot of micro interactions and functionality together with heavy mobile optimisation.
         My role was to take over the project after the initial concept round from the UX/UI practise lead, gather insights
         from user research team and roll out the designs within an allocated timeframe and budget.
-        I also collaborated with a cross-functional team of developers, project managers and other designers to deliver a
-        a project that would meet client's expectations.
+        I also collaborated with a cross-functional team of developers, project managers, and testers
+        to ensure the consistency between the live site and the design.
       </p>
     </div>
   </div>
@@ -141,9 +141,9 @@
       <p>
         Base on results and heatmaps from user research team, the majority of user interactions were within the top.
         Login, Wishlish and Bag were one of the most-clicked items.
-        Thus header interactions were very important. We wanted to provide customers a hassle-free shopping experience
-        by avoiding unnecessary functions/interactions and keeping the header streamlined with only mandatory items easily
-        accessible.
+        Thus header interactions were very important. We wanted to provide customers a hassle-free shopping experience, thus
+        we decluttered their current header by removing unnecessary items and designed a new streamlined one with only
+        mandatory items easily accessible.
       </p>
     </div>
 
@@ -234,8 +234,8 @@
         Therefore, the communication had to be smooth, otherwise, the outcomes could be disastrous.
         Having been through similar projects facing the same problems, we had created a uniform communication process
         in which we made sure everyone was on track of even the slightest changes.
-        Additionally, I also gained experience working on real life projects that required the designers to
-        compromise and balance out between what they think were good and the actual users/clients' ideas.
+        Additionally, I gained more experience on compromising between involved parties to provide users with the best
+        experience possible.
       </p>
     </div>
   </div>
