--- a/sa.html
+++ b/sa.html
@@ -135,7 +135,7 @@
     <div class="block small-block">
       <h5>SEARCH</h5>
       <p>
-        Expanded search panel with popular/most searched content and standards showed.
+        Expanded search panel with popular/most searched content and standards shown.
       </p>
     </div>
     <div class="block big-block no-text-block">
@@ -202,7 +202,7 @@
     <div class="block">
       <p>
         The project was not too heavy UX/UI-wise, but consistency and details were very important. The client had
-        clear requirements on margins, length and visibility of contents above the fold and expected the
+        clear requirements on margins, lengths and visibility of contents above the fold and expected the
         display to retain the same across different screen dimensions. Therefore, we did a lot of responsive testing.
         As our usual design process, we created a styleguide to use in the designs and development,
         but still ran into inconsistency problems due to the large amount of tailor-made contents.
