--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -92,11 +92,9 @@
       <div class="block">
         <h5>SYMPTOM(S) & QUESTIONS</h5>
         <p>
-          Tell the app your symptom(s) and answer some relevant questions. I did a lot of
-          research and believe that with a symptom and right info, there are high chances that the medical condition(s)
-          could be addressed.
-          It will depend on how smart the algorithm is to ask the right questions, analyse the answers and make use of the
-          medical database and the methods of exclusion and inclusion to guess the causes.
+          Tell the app your symptom(s) and answer some relevant questions.
+          The algorithm should be smart enough to ask the right questions, then analyses the answers and make use of the
+          medical database in conjunction with the method of exclusion and inclusion to provide possible causes.
         </p>
       </div>
 
@@ -124,7 +122,7 @@
         <div class="block">
           <h5 class="secondary-title">RESULT</h5>
           <p>
-            Result will be transparent, most matched condition will be showed together with less likely causes.
+            Results will be transparent, most matched condition will be shown together with less likely causes.
             If there are any other medical tests or additional methods needed, info will be indicated.
           </p>
         </div>
@@ -256,7 +254,7 @@
         <br />
         <strong>2 ways of inputing symptoms</strong> <br />
         Traditional input via text field (with search suggestions) for intuitiveness &
-        Visualised Human body for optimised user experience when picking on the troubled body part(s).
+        Visualised Human body for optimised user experience when picking on the troubled body part(s) - User testings needed.
       </p>
     </div>
 
