--- a/WishUp.html
+++ b/WishUp.html
@@ -114,8 +114,8 @@
     <div class="block">
       <h5>A 'CARL' STORY</h5>
       <p>
-        Imagin if Carl was in real life, and Russel would like to help him after knowing his situation. Russel would use
-        the app to post Carl's story so everyone could give a hand.
+        Imagin if Carl was in real life, and Russel would like to help him after acknowledging his situation. Russel would
+        use the network to post Carl's story so everyone could give a hand.
       </p>
     </div>
     <div class="block no-text-block">
