--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -66,8 +66,8 @@
     <div class="block">
       <h2>The idea</h2>
       <p>
-        An app that tracks the usage and recycling of plastic products. Thus, encourages people to
-        consume less and recycle more.
+        An app that tracks the usage and recycling of plastic products.
+        Being able to see one's impacts is an effective way of changing their habits.
       </p>
     </div>
       <div class="block">
