--- a/bardot.html
+++ b/bardot.html
@@ -70,7 +70,7 @@
       <h2>Bardot</h2>
       <p>
         Bardot is one of the most iconic Australia's high fashion brands for women and juniors.
-        I was in an UX/UI team to deliver a refreshed eCommerce website as part of their re-platform process.
+        I was in a UX/UI team to deliver a refreshed eCommerce website as part of their re-platform process.
       </p>
     </div>
       <div class="block">
@@ -91,7 +91,7 @@
     <div class="block">
       <p>
         As a dedicated eCommerce website,
-        the project required a lot of micro interactions and functionality together with heavy mobile optimisation.
+        the project required a lot of micro interactions and functionalities together with heavy mobile optimisation.
         My role was to take over the project after the initial concept round from the UX/UI practise lead, gather insights
         from user research team and roll out the designs within an allocated timeframe and budget.
         I also collaborated with a cross-functional team of developers, project managers, and testers
