--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <h5 class="small-label ease-in-a">ABOUT</h5>
       <p class="ease-in-a">
         I graduated in Multimedia Design and started my UX/UI career after an internship at S60, where I later
-        progressed as an in-house designer and had the chance to work with some amazing people.
+        progressed as an in-house designer and gained lots of experience working in the industry.
         <br /><br />
         I am now working on advancing my career and experimenting product ideas since I have an ambition for innovation.
         I am also looking for travel/relocation opportunities as I would love to widen my experiences.
