--- a/my-cv.html
+++ b/my-cv.html
@@ -184,6 +184,51 @@
       </div>
     </div>
 
+    <div class="event">
+      <div class="year" id="tl-skills"><strong>Skills</strong>
+      </div>
+      <div class="time-mark" id="tm-skills"></div>
+      <div class="achievemnents">
+        <div>
+          <h6 id="tl-tools">Tools</h6>
+          <ul>
+            <li id="tl-sketch">Sketch</li>
+            <li id="tl-invision">InVision & InVision Studio</li>
+            <li id="tl-zeplin">Zeplin</li>
+            <li id="tl-marvel">Marvel</li>
+            <li id="tl-photoshop">Photoshop</li>
+            <li id="tl-illustrator">Illustrator</li>
+            <li id="tl-more">More (if needed)</li>
+          </ul>
+        </div>
+        <div>
+          <h6>UX/UI</h6>
+          <ul>
+            <li>User-first engagement</li>
+            <li>Concept developing</li>
+            <li>UX/UI principles</li>
+            <li>Clean & intuitive approach</li>
+            <li>Willingness to learn</li>
+          </ul>
+        </div>
+        <div>
+          <h6>Front-end</h6>
+          <ul>
+            <li>HTML/CSS/JS</li>
+          </ul>
+        </div>
+        <div>
+          <h6>Others</h6>
+          <ul>
+            <li>Teamwork & Leadership</li>
+            <li>Interpersonal skills</li>
+            <li>Ownership & commitment</li>
+            <li>A burning desire to learn, improve and make impacts.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
   </div>
 
 
