--- a/my-cv.html
+++ b/my-cv.html
@@ -164,7 +164,7 @@
             <li id="tl-elements">Specs/guidelines</li>
             <li id="tl-liaised">Cross-functional team liaisions & collaboration</li>
             <li id="tl-mentored">Teamwork & team members mentoring</li>
-            <li id="tl-managed">Managed & delegated team's tasks</li>
+            <li id="tl-managed">Tasks management</li>
           </ul>
         </div>
       </div>
@@ -178,7 +178,11 @@
           <h6 id="tl-self">Self improvement & side projects</h6>
           <ul>
             <li id="tl-frondends">HTML/CSS/JS</li>
-            <li id="tl-side_projects"><a href = "./index.html">Product ideas & portfolio</a></li>
+            <li id="tl-side_projects"><a href = "./index.html">Product ideas & portfolio</a>
+              <img id="hand-waving" alt="" src="./Assets/hand-waving.png" />
+              <img id="hand-pointing" alt="" src="./Assets/hand-pointing.png" />
+              <img id="hand-ok" alt="" src="./Assets/hand-ok.png" />
+            </li>
           </ul>
         </div>
       </div>
