--- a/bardot.html
+++ b/bardot.html
@@ -206,7 +206,7 @@
     <div class="block small-block">
       <h5>PRODUCT BADGES</h5>
       <p>
-        5 types of badges required. Each had to be visually distinguish from one another and fit well together within
+        5 types of badges required. Each had to be visually distinguished from one another and fit well together within
         each product tile (maximum of 4 badges per product).
       </p>
     </div>
