--- a/credits.html
+++ b/credits.html
@@ -61,20 +61,18 @@
   <h1>Credits</h1>
   <div class="wrapper">
     <p>
-      Website and side projects were designed and built by me with the use of artworks from:
+      Designed and built by me with the use of artworks from:
     </p>
   </div>
 
-  <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
-  <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a>
-  <a href="http://www.freepik.com">Katemangostar / Freepik</a>
-  <a href="https://www.pexels.com/photo/photo-of-a-man-in-white-long-sleeved-top-on-blue-and-white-pop-up-camper-753603/">
-  Neil Kelly / Pexels</a>
+  <a href="https://www.flaticon.com/"                 title="Flaticon">Flaticon</a>
+  <a href="http://www.freepik.com">Freepik</a>
+  <a href="https://www.pexels.com/photo/photo-of-a-man-in-white-long-sleeved-top-on-blue-and-white-pop-up-camper-753603/">Pexels</a>
 
 
   <div class="wrapper">
     <p>
-      and libraries:
+      and js libraries:
     </p>
   </div>
 
@@ -84,7 +82,31 @@
   <a href="https://animejs.com/">Anime.js</a>
 
 
+  <div id="thanks">
+      <h3>SPECIAL THANKS TO</h3>
+      <h5>MY DOGS</h5>
+      <div id="dogs">
+        <img alt="Remy" src="./Assets/remy.png" />
+        <img alt="Tuti" src="./Assets/tuti.png" />
+        <img alt="Boo" src="./Assets/boo.png" />
+      </div>
+
+      <div class="wrapper" id="thank-dogs">
+        <p>
+          <i>for ultimate facelicking, lapsitting and getting me out of the chair. <br />
+             They are the main motivation for my journey of finding the 'final destination',
+             so they can join me in a more dog-friendly place they deserve.
+          </i>
+        </p>
+      </div>
+  </div>
+
+
+
 </section>
+
+
+
 
 
 
