--- a/my-cv.html
+++ b/my-cv.html
@@ -212,7 +212,7 @@
             <li>Concept developing</li>
             <li>UX/UI principles</li>
             <li>Clean & intuitive approach</li>
-            <li>Willingness to learn</li>
+            <li>Willingness to learn more</li>
           </ul>
         </div>
         <div>
