--- a/credits.html
+++ b/credits.html
@@ -50,6 +50,7 @@
       <li><a href="sa.html">Standards Australia</a></li>
       <li><a href="myPlasticFootprint.html">MyPlasticFootprint</a></li>
       <li><a href="WishUp.html">WishUp</a></li>
+      <li><a href="oldStuff.html">Old projects</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
@@ -143,6 +144,7 @@
       <a href="./index.html">Home</a>
       <a href="./index.html#about" rel="m_PageScroll2id">About</a>
       <a href="./credits.html">Credits</a>
+      <a href="./oldStuff.html">Oldies</a>
     </div>
   </div>
 </footer>
