--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       <li><a href="#projects" rel="m_PageScroll2id">Featured Project</a></li>
       <li><a href="#works" rel="m_PageScroll2id">Past experience</a></li>
       <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>
+      <li><a href="#old-stuff" rel="m_PageScroll2id">Old projects</a></li>
       <li><a href="#about" rel="m_PageScroll2id">About</a></li>
     </ul>
   </div>
@@ -276,7 +277,22 @@
 
 
 
-
+<section id="old-stuff">
+  <h3 class="ease-in-os">OLD UNI PROJECTS</h3>
+  <p class="ease-in-os tagline-text">
+    Some old stuff I made back at uni.
+  </p>
+  <a class="CTA-button ease-in-os" id="oldStuff-CTA" href="./oldStuff.html">
+    <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
+        <g id="Page-2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#F3425E">
+                <rect id="Rectangle" x="780.5" y="669.5" width="187" height="51"></rect>
+            </g>
+        </g>
+        <foreignObject width="188" height="52" y="14"><h6 class="CTA-label">CHECK IT OUT</h6></foreignObject>
+    </svg>
+  </a>
+</section>
 
 
 
