--- a/bardot.html
+++ b/bardot.html
@@ -49,6 +49,7 @@
       <li><a href="sa.html" onclick="closeMenu()">Standards Australia</a></li>
       <li><a href="myPlasticFootprint.html" onclick="closeMenu()">MyPlasticFootprint</a></li>
       <li><a href="WishUp.html" onclick="closeMenu()">WishUp</a></li>
+      <li><a href="oldStuff.html" onclick="closeMenu()">Old projects</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
@@ -282,6 +283,7 @@
       <a href="./index.html">Home</a>
       <a href="./index.html#about" rel="m_PageScroll2id">About</a>
       <a href="./credits.html">Credits</a>
+      <a href="./oldStuff.html">Oldies</a>
     </div>
   </div>
 </footer>
