--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 
 <section id="old-stuff">
-  <h3 class="ease-in-os">OLD UNI PROJECTS</h3>
+  <h3 class="ease-in-os">COURSEWORKS</h3>
   <p class="ease-in-os tagline-text">
     Some old stuff I made back at uni.
   </p>
