final final for the (almost) last time

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -86,23 +86,27 @@
 
 <section id="schecker-hiw-section">
 
-  <h3>HOW IT WORKS</h3>
+  <h3>WHY IT'LL WORK</h3>
 
   <div class="wrapper">
 
       <div class="block">
-        <h5>SYMPTOM(S) & QUESTIONS</h5>
+        <h5>CYBERCHRONDRIA</h5>
         <p>
-          Tell the app your symptom(s) and answer some relevant questions.
-          The algorithm should be smart enough to ask the right questions, then analyses the answers and make use of the
-          medical database in conjunction with the method of exclusion and inclusion to provide possible causes.
+          Many people search their symptoms online and either get paranoid about having a deadly disease, or
+          take it for granted (which can be dangerous if it's the sign of a serious condition), as searching
+          for symptoms online gives general results that people have to put all the information together and
+          make their own judgements. Moreover, although it is mandatory to consult with a healthcare professional
+          upon any abnormal sign, I think it is helpful for everyone to acknowledge and be aware of their
+          symptoms and diseases, especially those in less developed countries where the healthcare system is not
+          very reliable.
         </p>
       </div>
 
         <div class="block no-text-block">
           <div class="hiw input">
             <i class="fas fa-search"></i>
-            <span class="text-field">Your symptom</span>
+            <span class="text-field">search</span>
           </div>
         </div>
     </div>
@@ -121,8 +125,11 @@
         </div>
 
         <div class="block">
-          <h5 class="secondary-title">RESULT</h5>
+          <h5 class="secondary-title">WHAT THIS APP DOES</h5>
           <p>
+            Schecker's database contain reliable firsthand medical information. It will use a smart algorithm
+            to ask the user questions then analyses the answers to ask the next questions until there is enough
+            information for it to make an assessment.
             Results will be transparent, most matched condition will be shown together with less likely causes.
             If there are any other medical tests or additional methods needed, info will be indicated.
           </p>
@@ -130,51 +137,6 @@
 
     </div>
 
-
-    <div class="wrapper">
-
-      <div class="block">
-        <h5 class="secondary-title">APPOINTMENT BOOKING</h5>
-        <p>
-          From the result, there will be an option to book a doctor appointment, in which a report of the assessment
-          (questions and answers only, I think it would be better to not include the prediction so it won't effect the
-          doctor's judgement and diagnosis) will be send to the doctor prior to the appointment. Official diagnosis
-          will then be compared to Schecker's to improve its accuracy through machine learning.
-        </p>
-      </div>
-
-      <div class="block no-text-block">
-        <div class="hiw-video">
-          <video playsinline autoplay loop muted class="appScreen">
-            <source src="./Assets/schecker-hiw-book.mov" type="video/mp4" />
-            Sorry it's a really nice video your browser failed to load.
-          </video>
-        </div>
-      </div>
-
-    </div>
-
-
-    <div class="wrapper odd">
-
-      <div class="block no-text-block">
-        <div class="hiw-video">
-          <video playsinline autoplay loop muted class="appScreen">
-            <source src="./Assets/schecker-hiw-track.mov" type="video/mp4" />
-            Sorry it's a really nice video your browser failed to load.
-          </video>
-        </div>
-      </div>
-
-      <div class="block">
-        <h5 class="secondary-title">SYMPTOM TRACKING</h5>
-        <p>
-          Track the progression of symptoms and conditions to better manage them. Add medication and get reminders to take
-          it on time.
-        </p>
-      </div>
-
-    </div>
 
 </section>
 
@@ -379,8 +341,8 @@
 
     <div class="block">
       <p>
-        I am looking to make a UX revision on this. Meanwhile, please check out my InVision Prototype for a
-        more interactive experience.
+        This is the first draft of a semi-complete prototype.
+        I am looking to make a UX/UI revision soon.
       </p>
       <a class="cta-w-label" id="schecker-viewInvision" href="https://invis.io/B8RU1TAPZYV">
         <h6 class="CTA-label">VIEW PROTOTYPE</h6>
