--- a/credits.html
+++ b/credits.html
@@ -95,8 +95,7 @@
       <div class="wrapper" id="thank-dogs">
         <p>
           <i>for ultimate facelicking, lapsitting and getting me out of the chair. <br />
-             They are the main motivation for my journey of finding the 'final destination',
-             so they can join me in a more dog-friendly place they deserve.
+             Hopefully they'll be able to join me on my adventures at some dog-friendlier places.
           </i>
         </p>
       </div>
