--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
         progressed as an in-house designer and gained lots of experience working in the industry.
         <br /><br />
         I am now working on advancing my career and experimenting product ideas since I have an ambition for innovation.
-        As well as looking for travel/relocation opportunities as I am also on my way of finding the 'final destination',
-        and would love to widen my experiences.
+        As well as looking for travel/relocation opportunities as I have always wanted to explore different places and
+        cultures, and would love to widen my experiences.
         <br /><br />
         <i class="ease-in-a">Sorry social media isn't my cup of coffee. If you would like to contact me, please
                              <a href="mailto:nhuthoangdon@gmail.com">send me an email</a>.</i>
