--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -127,7 +127,7 @@
         <div class="block">
           <h5 class="secondary-title">WHAT THIS APP DOES</h5>
           <p>
-            Schecker's database contain reliable firsthand medical information. It will use a smart algorithm
+            Schecker's database contains reliable firsthand medical information. It will use a smart algorithm
             to ask the user questions then analyses the answers to ask the next questions until there is enough
             information for it to make an assessment.
             Results will be transparent, most matched condition will be shown together with less likely causes.
