old stuff updates

--- a/oldStuff.html
+++ b/oldStuff.html
@@ -74,7 +74,7 @@
           <h5>STOP-MOTION ANIMATIONS</h5>
           <p>
             Stop-motion animations I did during a course of "Alternative Animation". Made with cut-out paper, homemade puppet,
-            and clay (play-doh actually) on my 2009 Macbook Pro plus its front camera, in a shared apartment in Melbourne.
+            and clay (play-doh actually) on my old Macbook Pro's front camera, in a shared apartment in Melbourne.
             Since I was in a situation in which I couldn't afford much more, it's the improvision in order to have the
             projects completed I'm proud of.
           </p>
@@ -139,13 +139,44 @@
           <img alt="CD cover" src="./Assets/cdcover.png" />
         </div>
         <div class="oldStuff-proj">
-          <video playsinline autoplay loop muted>
-            <source src="./Assets/cdcover.mov" type="video/mp4" />
-            Sorry it's a really nice video your browser failed to load.
-          </video>
+          <img alt="Type Creature" src="./Assets/TypeCreature.png" />
         </div>
       </div>
-</div>
+    </div>
+
+    <div class="eachStuff">
+        <div class="oldStuff-proj-wrapper">
+          <div class="oldStuff-proj">
+            <h5>FIRST ATTEMPT AT LOGO DESIGN</h5>
+            <p>
+              Logo design for a friend's handmade leather goods business. Streamlined, refined, clean-cut
+              & organic - the logo looked good engraved or embossed on leather materials and the like.
+            </p>
+          </div>
+          <div class="oldStuff-proj">
+            <img alt="Nabulio Logo" src="./Assets/nabulio.png" />
+          </div>
+        </div>
+
+        <div class="oldStuff-proj-wrapper">
+          <div class="oldStuff-proj">
+            <img alt="" src="./Assets/Nabulio-Mockup.jpg" />
+          </div>
+          <div class="oldStuff-proj">
+            <img alt="" src="./Assets/Nabulio-2.jpg" />
+          </div>
+        </div>
+
+        <div class="oldStuff-proj-wrapper">
+          <div class="oldStuff-proj">
+            <img alt="" src="./Assets/Nabulio-3.jpg" />
+          </div>
+          <div class="oldStuff-proj">
+            <img alt="" src="./Assets/Nabulio-4.jpg" />
+          </div>
+        </div>
+    </div>
+
 
 
 
